tests/stacks/aws/test_data/expected/networking.istio.io_v1alpha3_virtualservice_metadata-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
<<<<<<< HEAD:tests/stacks/aws/test_data/expected/networking.istio.io_v1alpha3_virtualservice_metadata-ui.yaml
  name: metadata-ui
=======
  name: grafana-vs
>>>>>>> upstream/master:tests/stacks/aws/application/istio/test_data/expected/networking.istio.io_v1alpha3_virtualservice_grafana-vs.yaml
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
<<<<<<< HEAD:tests/stacks/aws/test_data/expected/networking.istio.io_v1alpha3_virtualservice_metadata-ui.yaml
    - uri:
        prefix: /metadata
=======
    - method:
        exact: GET
      uri:
        prefix: /istio/grafana/
>>>>>>> upstream/master:tests/stacks/aws/application/istio/test_data/expected/networking.istio.io_v1alpha3_virtualservice_grafana-vs.yaml
    rewrite:
      uri: /metadata
    route:
    - destination:
<<<<<<< HEAD:tests/stacks/aws/test_data/expected/networking.istio.io_v1alpha3_virtualservice_metadata-ui.yaml
        host: metadata-ui.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
=======
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
>>>>>>> upstream/master:tests/stacks/aws/application/istio/test_data/expected/networking.istio.io_v1alpha3_virtualservice_grafana-vs.yaml
